8301167: Fix compile issue on Java 11 syntax